# solana-mini-game-arcade

./: .gitignore  README.md  package-lock.json  package.json
app/: globals.css  layout.tsx  page.tsx
components/: admin-updates-listener.tsx  ai-difficulty-modal.tsx  arena-features.tsx  bet-and-room-selection-modal.tsx  bet-filter-modal.tsx  captcha-verification-modal.tsx  cookie-consent-banner.tsx  cookie-content.tsx  cookie-hero.tsx  disclaimers-content.tsx  disclaimers-hero.tsx  feature-modal.tsx  first-bet-disclaimer-modal.tsx  footer-legal-disclaimers.tsx  footer.tsx  game-card.tsx  game-detail-modal.tsx  game-grid.tsx  game-history-table.tsx  game-mode-selector.tsx  game-room-selector.tsx  games-carousel.tsx  games-footer.tsx  games-hero.tsx  header.tsx  hero.tsx  high-roller-balance-modal.tsx  high-roller-eligibility-check.tsx  high-roller-warning-modal.tsx  leaderboard-hero.tsx  leaderboard-rewards-breakdown.tsx  leaderboard-table.tsx  live-players-board.tsx  lore-section.tsx  matchmaking-board.tsx  matchmaking-hero.tsx  privacy-content.tsx  privacy-hero.tsx  providers.tsx  room-selector-tabs.tsx  (+8 more)
hooks/: useGameData.ts  useGameP2P.ts  useGamePowerUps.ts  useGameRealtime.ts  usePowerUps.ts  useSupabaseAuth.ts  useSupabaseRealtime.ts
nft-collection/: candy-machine-config.json
programs/sewer-arena-powerups/: Cargo.toml
programs/sewer-arena-powerups/src/: errors.rs  lib.rs  state.rs
programs/sewer-arena-powerups/src/instructions/: apply_powerup.rs  mod.rs  request_powerup.rs
public/: robots.txt  sitemap.xml
scripts/: 01-create-tables.sql  (+21 more)
(+176 files in other folders)
